<resources>
    <string name="app_name">TonyDoumit_AndroidMidterm_PetApp</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="dont_have_account">Don’t have an account? Sign up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mail">Email</string>
    <string name="pass">Password</string>
    <string name="signUp">Sign Up</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="signup">Sign Up</string>
    <string name="Pass">Password</string>
    <string name="Mail">Email</string>
    <string name="Last_Name">Last Name</string>
    <string name="First_Name">First Name</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="Login">Login</string>
    <string name="PASSWORD">Password</string>
    <string name="EMAIL">Email</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? Sign up</string>
    <string name="update">Update</string>
    <string name="back">back\n</string>
    <string name="profile_management">Profile Management</string>
    <string name="Cancel">Cancel</string>
    <string name="change_password">Change_Password\n</string>
    <string name="changepassword">Change Password\n</string>
    <string name="MAIL">Email</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="ChangePass">Change Password</string>
    <string name="password_is_same_as_old">The new password cannot be the same as the old password.</string>
    <string name="password_update_failed">Password update failed. Please try again later.</string>
    <string name="user_not_found">User not found. Please check the email address and try again.</string>
    <string name="editprofile">edit profile\n</string>
    <string name="all_fields_required">All fields are required.</string>
    <string name="password_updated">Password updated successfully.</string>
    <string name="password_update_failed_firebase">Failed to update password in Firebase. Please try again later.</string>
    <string name="user_not_authenticated">User is not authenticated. Please log in again.</string>
    <string name="relogin_required">You need to log in again to update your password.</string>
    <string name="current_password">Current Password</string>
    <string name="cancel">Cancel\n</string>
    <string name="dog_icon">dog\n</string>
    <string name="pet_name">Pet Name</string>
    <string name="species_breed">Species, Breed</string>
    <string name="cats">Cats</string>
    <string name="parrot">Parrot</string>
    <string name="rabbit">Rabbit</string>
    <string name="welcome_firstname">Welcome</string>
    <string name="welcome_message">Hello, %1$s</string>
    <string name="search_pet_to_adopt">Search pet to adopt</string>
    <string name="location">location\n</string>
    <string name="favorite">favorite\n</string>
    <string name="dogs">dogs\n</string>
    <string name="rabbits">rabbits\n</string>
    <string name="illustration_description">illustration description</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="pet_age">pet_age</string>
    <string name="pet_breed">pet_breed</string>
    <string name="pet_location">pet_location</string>
    <string name="pet_description">pet_description</string>
    <string name="pet_type">pet_type</string>
</resources>