<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF8E1"
    tools:context="view.ProfileActivity">

    <!-- Profile Image -->
    <ImageView
        android:id="@+id/imageCat"
        android:layout_width="120dp"
        android:layout_height="180dp"
        android:src="@drawable/img"
        android:scaleType="centerCrop"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="22dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="300dp"
        app:layout_constraintEnd_toEndOf="parent" />


    <!-- CardView Form for Profile -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewForm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="#FFFFFF"
        app:cardCornerRadius="16dp"
        app:cardElevation="12dp"
        app:layout_constraintTop_toBottomOf="@id/imageCat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="16dp">

            <!-- Profile Management Title -->
            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/profile_management"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/button_brown"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="22dp" />

            <!-- First Name Input -->
            <EditText
                android:id="@+id/editTextFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:background="@drawable/rounded_edittext"
                android:padding="12dp"
                app:layout_constraintTop_toBottomOf="@id/textViewTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="22dp" />

            <!-- Last Name Input -->
            <EditText
                android:id="@+id/editTextLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:background="@drawable/rounded_edittext"
                android:padding="12dp"
                app:layout_constraintTop_toBottomOf="@id/editTextFirstName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="22dp" />

            <!-- Email Input -->
            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:background="@drawable/rounded_edittext"
                android:padding="12dp"
                app:layout_constraintTop_toBottomOf="@id/editTextLastName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="22dp" />

            <!-- Update Button -->
            <Button
                android:id="@+id/buttonUpdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:backgroundTint="@color/button_brown"
                android:padding="12dp"
                app:layout_constraintTop_toBottomOf="@id/editTextEmail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="22dp" />

            <!-- Back Button -->
            <Button
                android:id="@+id/buttonBack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Cancel"
                android:backgroundTint="@color/button_brown"
                android:padding="12dp"
                app:layout_constraintTop_toBottomOf="@id/buttonUpdate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="22dp" />

            <TextView
                android:id="@+id/textViewChangePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/changepassword"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/button_brown"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/buttonBack"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
